ewan, just fix some alignment?

--- a/pdpms-frontend/src/modules/AssetProperty/AssetProperty.css
+++ b/pdpms-frontend/src/modules/AssetProperty/AssetProperty.css
@@ -40,12 +40,12 @@
 .AssetProperty-SearchBox {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  gap: 1rem;
+  gap: 0.5rem;
   margin-bottom: 0.2rem;
   padding-left: 0;
-  margin-right: 0.2rem;
+  margin-right: 0;
   width: 100%;
+  justify-content: flex-end;
 }
 
 .AssetProperty-SearchInput {
@@ -59,7 +59,6 @@
   color: #223354;
   outline: none;
   transition: border 0.2s;
-  margin-left:1rem;
   text-align: left;
 }
 
@@ -67,53 +66,50 @@
   border-color: #223354;
 }
 
-.AssetProperty-SearchWrapper {
-  display: flex;
-  align-items: center;
-  margin-left: auto;
-}
-
 .AssetProperty-SearchBtn {
   height: 2rem;
   padding: 0 1.3rem;
   background: #223354;
-  color: #ffffff;
+  color: #fff;
   border: none;
   border-radius: 0.4rem;
   font-size: 1rem;
   font-weight: 400;
   cursor: pointer;
   transition: background 0.2s;
-  margin-left: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   white-space: nowrap;
 }
 
 .AssetProperty-SearchBtn:hover {
- background: #2a5db0;
+  background: #2a5db0;
+}
+
+.AssetProperty-AddBtnContainer {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 1.2rem 1.5rem;
+  background: transparent;
+  margin-top: -5rem; 
+  margin-right: 0.1rem;
 }
 
 .AssetProperty-AddBtn {
-  position: fixed;
-  right: 3.5rem;
-  bottom: 2rem;
   background: #223354;
   color: #fff;
   border: none;
   border-radius: 7px;
   padding: 0.5rem 1.3rem;
   font-size: 0.9rem;
-  font-weight: 400px;
-  cursor: pointer;
-  transition: background 0.2s;
+  font-weight: 400;
   box-shadow: 0 1px 2px rgba(44,62,80,0.08);
-  z-index: 100;
-  display: flex;
-  align-items: center;
-  gap: 0rem;
-  margin-bottom: 1rem;
+  cursor: pointer;
+  transition: background 0.2s, box-shadow 0.2s;
+  white-space: nowrap;
 }
-
-
 
 .AssetProperty-AddBtn:hover {
   background: #2a5db0;
@@ -131,13 +127,14 @@
   background: #fff;
   border-radius: 0.5rem;
   border: 1px solid #e0e0e0;
-  min-height: 27rem; 
+  min-height: 26rem; 
   max-height: calc(100vh - 10rem); 
   box-shadow: 0 0.1rem 0.2rem rgba(162, 162, 162, 0.07);
   display: flex;
   flex-direction: column;
   position: relative;
   overflow: auto; 
+  margin-top: 1.2rem;
 }
 
 .AssetProperty-Table {
